# GLL

./: CMakeLists.txt  README.md
glsl/fragments/: red.frag  white.frag
include/GLL/: callbacks.hh  colour.hh  init.hh  mesh.hh  platform.hh  shader.hh  types.hh
src/: main.cc
src/graphics/: init.cc
src/graphics/callbacks/: callbacks.cc
src/graphics/entities/: mesh.cc  shader.cc
src/utils/: colour.cc  platform.cc
